# bs-browser

./: .gitignore  Cargo.toml  README.md  lefthook.yml  package-lock.json  package.json
.github/workflows/: rust.yml
common/: Cargo.toml
common/src/api/: beatsaver.rs  mod.rs
common/src/types/: map.rs  mod.rs  ss_leaderboard.rs
gui-browser/: .gitignore  Cargo.toml  README.md
gui-browser/src/: main.rs
gui-browser/src/utils/: button.rs
gui-browser/src/utils/ui/: build_widget.rs  button.rs  mod.rs
tui-browser/: Cargo.toml  log.txt
tui-browser/src/: main.rs
tui-browser/src/api/: fetch_beatsaver.rs  fetch_scoresaber.rs  mod.rs
tui-browser/src/types/: map_types.rs  mod.rs
tui-browser/src/ui/: map_browser.rs  map_detail.rs  mod.rs
tui-browser/src/utils/: loading.rs  mod.rs  preview_player.rs
