[package]
name = "tui-browser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.26.1"
indicatif = "0.17.3"
log = "0.4.17"
reqwest = { version = "0.11.16", features = ["json", "blocking"] }
rodio = "0.17.1"
serde = { version = "1.0.160", features = ["derive"] }
simplelog = "0.12.1"
tokio = { version = "1.27.0", features = ["full"] }
tui = "0.19.0"
unicode-width = "0.1.10"
